Fixed z-indexes to show pop-up container infront of sidebar

--- a/frontend/src/app/edit/edit.component.scss
+++ b/frontend/src/app/edit/edit.component.scss
@@ -213,7 +213,7 @@ $page-height: 29.7cm;
     border-right: 1px solid #c7c7c7;
     box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
-    z-index: 20;
+    z-index: 2;
 }
 
 .pageName {
@@ -411,7 +411,7 @@ div[contenteditable="true"]:focus {
     left: 0;
     bottom: 0;
     display: none;
-    z-index:100;
+    z-index:20;
     left: 0;
     margin: 10px;
     height: 37.7px;
